ingress/wokring-ingress/ingress-db.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace: testapp
  annotations:
    #alb.ingress.kubernetes.io/group.name: test-alb
    # alb.ingress.kubernetes.io/backend-protocol: HTTP
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/target-type: ip
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "db.xyz.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoexpress-svc
            port:
              number: 8081
